--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,26 +1,92 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: 'Raleway', sans-serif;
+}
+
 .board-wrapper {
     width: 100%;
-    padding: 15px;
-    border: 1px solid green;
+    display: flex;
+    justify-content: flex-start;
+  
 }
 .column-wrapper {
+    margin: 1%;
     padding: 10px;
-    max-width: 10%;
-    min-height: 200px;
-    border: 2px solid rebeccapurple;
-    border-radius: 5%;
+    width: 10%;
+
+    background:#001fff2e;
+    border: none;
+    border-radius: 7px;
 }
+
+/* .column-wrapper h3 {
+   
+} */
 
 .form-wrapper {
     display: flex;
-    flex-wrap: nowrap;
-    padding: 10px;
-    width: 85%;
-    border: 1px solid red;
-    
+    flex-direction: column;
 }
 
 input {
-    width: 70%;
+    padding: 8px;
+    font-size: 15px;
+    border: 1px solid #2700ff61;
+    border-radius: 3px;
+}
+
+button {
+    margin-top: 3%;
+    padding: 3%;
+
+    background: #001fff2e;
+    color: white;
+    font-size: 15px;
+    font-weight: 600;
+    border: none;
+    border-radius: 3px;
+}
+
+.title-wrapper {
+    display: flex;
+    justify-content: space-between;
+
+    padding: 2% 3%;
+    background: #001fff1f;
+    color: white;
+    text-transform: capitalize;
     
+    border-radius: 3px;
+}
+
+.task-input {
+    display: flex;
+    flex-direction: column;
+}
+
+.task-input input {
+    /* rows: 5; */
+}
+
+.all-tasks-wrapper {
+    margin: 10% 0;
+}
+
+.task-wrapper {
+    margin: 10px 0;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    background: #ffffffc2;
+
+    border-radius: 3px;
+    box-shadow:  0px 3px 7px rgba(62, 62, 62, 0.24);
+}
+
+.close-button {
+    width: 20px;
 }
